--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,15 @@
 name = "kolumn"
 version = "1.0.0"
 authors = ["Fredrik Larsson <nossralf@gmail.com>"]
+homepage = "https://github.com/nossralf/kolumn"
+repository = "https://github.com/nossralf/kolumn"
+readme = "README.md"
 license = "MIT"
 
 [badges]
 travis-ci = { repository = "nossralf/kvicksilver" }
 appveyor = { repository = "nossralf/kvicksilver" }
+maintenance = { status = "experimental" }
+
 [dependencies]
 clap = "^2"
